# ROWPlus

./: .gitignore  .tags  .tags1  CMakeLists.txt  LICENSE
ROWPlus/: ROWPlus.h
ROWPlus/Core/: ODEJac.h  ODEScheme.h  ODESolver.h  ODEUtility.h
ROWPlus/Stepper/: Stepper.h
cmake/: FindCantera.cmake  FindEigen3.cmake  FindSUNDIALS.cmake  FindStandardMathLibrary.cmake  ROWPlusCommonInclude.cmake  RegexUtils.cmake
examples/: CMakeLists.txt
examples/ChemicalSystems/: AdapStepSize.cpp  CMakeLists.txt  FixedStepSize.cpp  RxnFunctor.cpp  RxnFunctor.h  main.cpp
examples/HellowWorld/: CMakeLists.txt  main.cpp
examples/Lorenz_96/: CMakeLists.txt  lorenz96.cpp  lorenz96.h  main.cpp  result.txt
